updated main page to show basic app components

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Mtg Data Helper</string>
+    <string name="open_text">MTG Data Helper</string>
+
 </resources>
